Squashed commit of the following:
commit 4b612fc0b70e64861bbb4960f029be859d3a2e19
Merge: 324c221 8748ecd
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Sat Nov 12 22:02:33 2022 -0300

    Merge pull request #2 from alinefbrito/master

    Master

commit 8748ecd9375871bacdf42af44a231bfeeb387d64
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Sat Nov 12 22:07:18 2022 -0300

    ajuste

commit bbbcd2015d207dffff33e253fa879e85247626e1
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Sat Nov 12 20:22:30 2022 -0300

    Ajustes e melhorias do projeto
    Custom array e constantes

commit 3c5681457ce293a69260cba2dbc3aafe5b5391e7
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Sat Nov 12 21:05:51 2022 -0300

    Update .gitignore

commit 5514e10eae85dbe24aa4cf5e6e5aeeb04177bea6
Merge: 79faab9 9a9870c
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Sat Nov 12 21:04:42 2022 -0300

    Merge branch 'main' of https://github.com/alinefbrito/AgendaArmazenamento

commit 324c2214ef347d7a0e8b6869726f124f6d9c8c1e
Merge: 9a9870c 3c56814
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Sat Nov 12 21:01:12 2022 -0300

    Merge pull request #1 from alinefbrito/master

    Master

commit 9a9870c80dfaf47f83496807a5cefcfce3b6d08d
Author: Aline F. Brito <alinefbrito@gmail.com>
Date:   Fri Nov 11 09:25:53 2022 -0300

    atualização código

commit 1067a2c27bfae42930a0713898a1fefc506eb196
Author: Aline F. Brito <aline.brito3@etec.sp.gov.br>
Date:   Tue Feb 8 20:20:40 2022 -0300

    Update README.md

commit 83b21e3e1c4a1019085c7d7f3288ed6ce2a425e1
Author: Aline F. Brito <aline.brito3@etec.sp.gov.br>
Date:   Tue Feb 8 20:17:49 2022 -0300

    Create README.md

commit 109eab2026fd8575fd34dce1b78f021ca6839404
Author: AlineBrito <alinefbrito@gmail.com>
Date:   Mon Oct 19 22:57:50 2020 -0300

    Initial commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdk 32
+    compileSdk 29
 
     defaultConfig {
         applicationId "com.example.agendasqlite"
-        minSdkVersion 26
-        targetSdkVersion 31
+        minSdk 26
+        targetSdk 29
         versionCode 1
         versionName "1.0"
 
@@ -19,21 +19,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.agendasqlite'
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    namespace 'com.example.agendasqlite'
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
 }
